[INJICERT-1140][INJICERT-1141][INJICERT-1142] Credential Configuration API contract changes (#380)
* Renaming credentials/configurations to credential-configuration

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Rename fields in CredentialConfigurationDTO, context to contextURLs, credentialType to credentialTypes and order to credentialFieldsDisplayOrder

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Update postman collection as per the renaming in credential configuration endpoint and request DTO

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Adding .DS_Store file in gitignore

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Add structured object instead of generic Map for display field in credential configuration DTO

Signed-off-by: jackjain <jackjain1995@gmail.com>

* [INJICERT-1141] Autoassign binding, signing and proof values for config apis (#1)

* Add configurations for proof, binding methods and credential sign algos

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* Auto assign proor, binding methods and signing alg values for config api

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

---------

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>
Signed-off-by: jackjain <jackjain1995@gmail.com>

* Adding structured object for credentialSubject field in credential configuration DTO, renaming the field to credentialSubjectDefinition

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Renaming display field to metaDataDisplay, order to displayOrder in credential configuration

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Adding a structured object for claims field in credential configuration

Signed-off-by: jackjain <jackjain1995@gmail.com>

* [INJICERT-1142] Fix mapping issues for entity and dto (#2)

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>
Signed-off-by: jackjain <jackjain1995@gmail.com>

* Updating postman collection as per renaming done in credential configuration DTO fields

Signed-off-by: j